--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
         integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/portfolio.min.css">
 </head>
 
 <body>
@@ -207,56 +207,58 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <div class="footer-address-container">
-                <a class="logo logo-footer link" href="" lang="en">Web<span class="logo-dark-theme">Studio</span></a>
-                <address class="address">
-                    <ul class="list">
-                        <li>
-                            <a class="contact-address link" href="https://goo.gl/maps/xCLhZQx8e7ZkGSYM7" target="_blank"
-                                rel="noopener noreferrer">г. Киев,
-                                пр-т Леси Украинки, 26</a>
-                        </li>
-                        <li>
-                            <a class="contact-link link" href="mailto:info@example.com">info@example.com</a>
-                        </li>
-                        <li>
-                            <a class="tel-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-                        </li>
-                    </ul>
-                </address>
-            </div>
+             <div class="footer-address-container">             
+                <a class="logo logo-footer link" href="" lang="en">Web
+                    <span class="logo-dark-theme">Studio</span>
+                </a>
+                 <address class="address">
+                 <ul class="list">
+                     <li class="items logo-item">
+                         <a class="contact-address link" href="https://goo.gl/maps/xCLhZQx8e7ZkGSYM7" target="_blank"
+                             rel="noopener noreferrer">г. Киев,
+                             пр-т Леси Украинки, 26</a>
+                     </li>
+                     <li class="items">
+                         <a class="contact-link link" href="mailto:info@example.com">info@example.com</a>
+                     </li>
+                     <li class="items">
+                         <a class="tel-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                     </li>
+                 </ul>
+               </address>
+             </div>-->
             <div class="social-list-container">
-                <h3 class="titles-list titles-dark-them">Присоединяйтесь</h3>
-                <ul class="social-list-footer list">
-                    <li class="social-list-item">
-                        <a href="" class="social-list-link-footer link">
-                            <svg class="social-list-icon-footer">
-                                <use href="./images/icons.svg#instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a href="" class="social-list-link-footer link">
-                            <svg class="social-list-icon-footer">
-                                <use href="./images/icons.svg#twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a href="" class="social-list-link-footer link">
-                            <svg class="social-list-icon-footer">
-                                <use href="./images/icons.svg#facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a href="" class="social-list-link-footer link">
-                            <svg class="social-list-icon-footer">
-                                <use href="./images/icons.svg#linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                <p class="titles-list titles-dark-them">Присоединяйтесь</p>
+              <ul class="social-list-footer list">
+                <li class="social-list-item">
+                    <a href="" class="social-list-link-footer link">
+                        <svg class="social-list-icon-footer">
+                            <use href="./images/icons.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-list-item">
+                    <a href="" class="social-list-link-footer link">
+                        <svg class="social-list-icon-footer">
+                            <use href="./images/icons.svg#twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-list-item">
+                    <a href="" class="social-list-link-footer link">
+                        <svg class="social-list-icon-footer">
+                            <use href="./images/icons.svg#facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-list-item">
+                    <a href="" class="social-list-link-footer link">
+                        <svg class="social-list-icon-footer">
+                            <use href="./images/icons.svg#linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+              </ul>
             </div>
             <div class="footer-subscription-container">
                 <p class="titles-list titles-dark-them">Подпишитесь на рассылку</p>
