--- a/portfolio.html
+++ b/portfolio.html
@@ -55,29 +55,29 @@
                     <div class="filters-box">
                         <h2 class="visually-hidden">Фильтр</h2>
                         <ul class="filters-list list">
-                            <li class="filters-list-item">
-                                <button class="filters-btn" type="button">Все</button>
+                            <li class="filters-list__item">
+                                <button class="filters__btn" type="button">Все</button>
                             </li>
-                            <li class="filters-list-item">
-                                <button class="filters-btn" type="button">Веб-сайты</button>
+                            <li class="filters-list__item">
+                                <button class="filters__btn" type="button">Веб-сайты</button>
                             </li>
-                            <li class="filters-list-item">
-                                <button class="filters-btn" type="button">Приложения</button>
+                            <li class="filters-list__item">
+                                <button class="filters__btn" type="button">Приложения</button>
                             </li>
-                            <li class="filters-list-item">
-                                <button class="filters-btn" type="button">Дизайн</button>
+                            <li class="filters-list__item">
+                                <button class="filters__btn" type="button">Дизайн</button>
                             </li>
-                            <li class="filters-list-item">
-                                <button class="filters-btn" type="button">Маркетинг</button>
+                            <li class="filters-list__item">
+                                <button class="filters__btn" type="button">Маркетинг</button>
                             </li>
                         </ul>
                     </div>
                 </section>
                 <h1 class="visually-hidden">Наши проэкты</h1>
                 <ul class="projects-list list">
-                    <li class="projects-list-item">
-                        <a class="projects-list-link-wrapper link" href="">
-                          <div class="projects-list-contant-wrapper">
+                    <li class="projects-list__item">
+                        <a class="projects-list__link-wrapper link" href="">
+                          <div class="projects-list__contant-wrapper">
                             <img src="./images/portfolio/img-1.png" alt="Веб-сайт" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -85,13 +85,13 @@
                           </div>
                             <div class="project-container">
                                 <h3 class="project-title">Технокряк</h3>
-                                <p class="project-title-description">Веб-сайт</p>
+                                <p class="project-title__description">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-list-item">
-                        <a class="projects-list-link-wrapper link" href="">
-                          <div class="projects-list-contant-wrapper">
+                    <li class="projects-list__item">
+                        <a class="projects-list__link-wrapper link" href="">
+                          <div class="projects-list__contant-wrapper">
                             <img src="./images/portfolio/img-2.png" alt="Дизайн" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -99,13 +99,13 @@
                           </div>
                             <div class="project-container">
                                 <h3 class="project-title">Постер New Orlean vs Golden Starspan</h3>
-                                <p class="project-title-description">Дизайн</p>
+                                <p class="project-title__description">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-list-item">
-                        <a class="projects-list-link-wrapper link" href="">
-                          <div class="projects-list-contant-wrapper">
+                    <li class="projects-list__item">
+                        <a class="projects-list__link-wrapper link" href="">
+                          <div class="projects-list__contant-wrapper">
                             <img src="./images/portfolio/img-3.png" alt="Приложение" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -113,13 +113,13 @@
                           </div>
                             <div class="project-container">
                                 <h3 class="project-title">Ресторан Seafood</h3>
-                                <p class="project-title-description">Приложение</p>
+                                <p class="project-title__description">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-list-item">
-                        <a class="projects-list-link-wrapper link" href="">
-                          <div class="projects-list-contant-wrapper">
+                    <li class="projects-list__item">
+                        <a class="projects-list__link-wrapper link" href="">
+                          <div class="projects-list__contant-wrapper">
                             <img src="./images/portfolio/img-4.png" alt="Маркетинг" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -127,13 +127,13 @@
                           </div>
                             <div class="project-container">
                                 <h3 class="project-title">Проект Prime</h3>
-                                <p class="project-title-description">Маркетинг</p>
+                                <p class="project-title__description">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-list-item">
-                        <a class="projects-list-link-wrapper link" href="">
-                          <div class="projects-list-contant-wrapper">
+                    <li class="projects-list__item">
+                        <a class="projects-list__link-wrapper link" href="">
+                          <div class="projects-list__contant-wrapper">
                             <img src="./images/portfolio/img-5.png" alt="Приложение" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -141,13 +141,13 @@
                           </div>
                             <div class="project-container">
                                 <h3 class="project-title">Проект Boxes</h3>
-                                <p class="project-title-description">Приложение</p>
+                                <p class="project-title__description">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-list-item">
-                        <a class="projects-list-link-wrapper link" href="">
-                          <div class="projects-list-contant-wrapper">
+                    <li class="projects-list__item">
+                        <a class="projects-list__link-wrapper link" href="">
+                          <div class="projects-list__contant-wrapper">
                             <img src="./images/portfolio/img-6.png" alt="Веб-сайт" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -155,13 +155,13 @@
                           </div>
                             <div class="project-container">
                                 <h3 class="project-title">Inspiration has no Borders</h3>
-                                <p class="project-title-description">Веб-сайт</p>
+                                <p class="project-title__description">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-list-item">
-                        <a class="projects-list-link-wrapper link" href="">
-                          <div class="projects-list-contant-wrapper">
+                    <li class="projects-list__item">
+                        <a class="projects-list__link-wrapper link" href="">
+                          <div class="projects-list__contant-wrapper">
                             <img src="./images/portfolio/img-7.png" alt="Дизайн" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -169,13 +169,13 @@
                           </div>
                             <div class="project-container">
                                 <h3 class="project-title">Издание Limited Edition</h3>
-                                <p class="project-title-description">Дизайн</p>
+                                <p class="project-title__description">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-list-item">
-                        <a class="projects-list-link-wrapper link" href="">
-                          <div class="projects-list-contant-wrapper">
+                    <li class="projects-list__item">
+                        <a class="projects-list__link-wrapper link" href="">
+                          <div class="projects-list__contant-wrapper">
                             <img src="./images/portfolio/img-8.png" alt="Маркетинг" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -183,13 +183,13 @@
                           </div>
                             <div class="project-container">
                                 <h3 class="project-title">Проект LAB</h3>
-                                <p class="project-title-description">Маркетинг</p>
+                                <p class="project-title__description">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-list-item">
-                        <a class="projects-list-link-wrapper link" href="">
-                          <div class="projects-list-contant-wrapper">
+                    <li class="projects-list__item">
+                        <a class="projects-list__link-wrapper link" href="">
+                          <div class="projects-list__contant-wrapper">
                             <img src="./images/portfolio/img-9.png" alt="Приложение" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -197,7 +197,7 @@
                           </div>
                             <div class="project-container">
                                 <h3 class="project-title">Growing Business</h3>
-                                <p class="project-title-description">Приложение</p>
+                                <p class="project-title__description">Приложение</p>
                             </div>
                         </a>
                     </li>
@@ -212,16 +212,16 @@
                     <span class="logo-dark-theme">Studio</span>
                 </a>
                  <address class="address">
-                 <ul class="list">
-                     <li class="items logo-item">
+                 <ul class="address-list-footer list">
+                     <li class="address-list-footer__item logo-item">
                          <a class="contact-address link" href="https://goo.gl/maps/xCLhZQx8e7ZkGSYM7" target="_blank"
                              rel="noopener noreferrer">г. Киев,
                              пр-т Леси Украинки, 26</a>
                      </li>
-                     <li class="items">
+                     <li class="address-list-footer__item">
                          <a class="contact-link link" href="mailto:info@example.com">info@example.com</a>
                      </li>
-                     <li class="items">
+                     <li class="address-list-footer__item">
                          <a class="tel-link link" href="tel:+380991111111">+38 099 111 11 11</a>
                      </li>
                  </ul>
@@ -230,40 +230,40 @@
             <div class="social-list-container">
                 <p class="titles-list titles-dark-them">Присоединяйтесь</p>
               <ul class="social-list-footer list">
-                <li class="social-list-item">
-                    <a href="" class="social-list-link-footer link">
-                        <svg class="social-list-icon-footer">
+                <li class="social-list-footer__item">
+                    <a href="" class="social-list-footer__link link">
+                        <svg class="social-list-footer__icon">
                             <use href="./images/icons.svg#instagram"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-list-item">
-                    <a href="" class="social-list-link-footer link">
-                        <svg class="social-list-icon-footer">
+                <li class="social-list-footer__item">
+                    <a href="" class="social-list-footer__link link">
+                        <svg class="social-list-footer__icon">
                             <use href="./images/icons.svg#twitter"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-list-item">
-                    <a href="" class="social-list-link-footer link">
-                        <svg class="social-list-icon-footer">
+                <li class="social-list-footer__item">
+                    <a href="" class="social-list-footer__link link">
+                        <svg class="social-list-footer__icon">
                             <use href="./images/icons.svg#facebook"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-list-item">
-                    <a href="" class="social-list-link-footer link">
-                        <svg class="social-list-icon-footer">
+                <li class="social-list-footer__item">
+                    <a href="" class="social-list-footer__link link">
+                        <svg class="social-list-footer__icon">
                             <use href="./images/icons.svg#linkedin"></use>
                         </svg>
                     </a>
                 </li>
               </ul>
             </div>
-            <div class="footer-subscription-container">
+            <div class="footer-container__subscription">
                 <p class="titles-list titles-dark-them">Подпишитесь на рассылку</p>
                 <form class="subscription">
-                    <input type="email" name="user-mail" class="footer-form-input" required placeholder="E-mail">
+                    <input type="email" name="user-mail" class="footer-form__input" required placeholder="E-mail">
                     <button type="submit" class="subscription-btn">Подписаться
                         <svg class="icon-send">
                             <use href="./images/icons.svg#send"></use>
